# rust-catan

./: Cargo.toml  LICENSE  README.md
catan/: Cargo.toml
catan-player/: Cargo.toml
catan-player/src/: action_parser.rs  main.rs  terminal_player.rs
catan-player/src/display/: drawtype.rs  mod.rs  pretty_terminal.rs  utils.rs
catan/src/: lib.rs
catan/src/board/: error.rs  mod.rs
catan/src/board/layout/: default.rs  layout.rs  mod.rs  utils.rs
catan/src/board/map/: layer_map.rs  mod.rs  option_layer_map.rs  tricell_map.rs
catan/src/board/setup/: mod.rs  random_default.rs
catan/src/board/utils/: coord.rs  mod.rs  topology.rs
catan/src/game/: action.rs  apply.rs  error.rs  legal.rs  mod.rs  notification.rs  phase.rs  play.rs
catan/src/player/: mod.rs  picker_player.rs  randomy.rs  relative.rs
catan/src/state/: display.rs  error.rs  mod.rs  player_hand.rs  separated_state.rs  topology.rs  tricell_state.rs
catan/src/test/: mod.rs
catan/src/utils/: development_card.rs  mod.rs  resource.rs
pycatan/: Cargo.toml
pycatan/src/: environment.rs  lib.rs  py_catan_observation.rs  py_observation_format.rs  python_player.rs  python_state.rs
src/: board.rs  constants.rs  error.rs  game.rs  main.rs
src/board/: error.rs  mod.rs
src/board/layout/: layout.rs  mod.rs
src/board/map/: fullmap.rs  mod.rs
src/board/setup/: random_default.rs
src/board/utils/: coord.rs  mod.rs  transform.rs
src/game/: action.rs  mod.rs
src/state/: debug.rs  display.rs  mod.rs  pretty_terminal_display.rs
src/utils/: drawtype.rs  mod.rs  resource.rs
