[package]
name = "catan-player"
version = "0.1.0"
authors = ["Quentin Gendre <swynfel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.catan]
path = "../catan"

[dependencies.once_cell]
version = "1.3"

[dependencies.termion]
version = "1.5"
